<resources>
    <string name="app_name">Berlin Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="places_sights">Sights</string>
    <string name="places_museums">Museums</string>
    <string name="places_parks">Parks</string>
    <string name="places_food">Food</string>
    <string name="berlin_infoblock1">
        Berlin is the capital city of Germany. It is also the biggest city in Germany.
    </string>
    <string name="berlin_infoblock2">
        The city is in the eastern part of Germany.
        It is about 70 km (43.50 mi) west of Poland. Berlin has an area of 891 km2 (344.02 sq mi).
        The rivers Havel, Dahme and Spree run through Berlin. It has an oceanic climate.
    </string>
    <string name="berlin_infoblock3">
        Berlin is home to many famous buildings and monuments, like the Siegessäule,
        the Brandenburger Tor, the Reichstag and the boulevard Unter den Linden.
        On the boulevard are the Humboldt University and the State Opera of Berlin.
        The Governing Mayor of the city is Michael Müller (SPD).
    </string>
    <string name="berlin_infoblock4">
        Berlin is a world city of culture, politics, media and science.
        There are a lot of technology companies in the city. They are important for the city\'s economy.
        Many planes and trains travel to and from Berlin because the city is an important place for tourism and business[3].
    </string>
    <string name="berlin_infoblock5">
        Berlin is an important city for the history of Germany.
        The King of Prussia and the Emperor of Germany lived in Berlin.
        The government of Germany was in Berlin for many years.
        Bombs destroyed many buildings in the city in World War Two.
        The city was split into West Berlin and East Berlin after World War Two.
        After the Berlin Wall was built in 1961 very few people were allowed to cross from East Berlin into West Berlin.
        The wall divided the city until 1989 when the East German government decided to allow anyone to cross,
        and people decided to destroy the wall.
    </string>
    <string name="price_cheap">Cheap</string>
    <string name="price_medium">Medium</string>
    <string name="price_expensive">Expensive</string>
    <string name="east_side_gallery">East Side Gallery</string>
    <string name="east_side_gallery_d">
        The East Side Gallery is an international memorial for freedom.
        It is a 1316 m long section of the Berlin Wall located near the centre
        of Berlin on Mühlenstraße in Friedrichshain-Kreuzberg.
        The actual border at this point was the river Spree.
        The gallery is located on the so-called "hinterland mauer",
        which closed the border to West Berlin.
    </string>
    <string name="east_side_gallery_address">Mühlenstraße, 10243 Berlin</string>
    <string name="brandenburg_gate">Brandenburg Gate</string>
    <string name="brandenburg_gate_d">
        The Brandenburg Gate (German: Brandenburger Tor) is an 18th-century neoclassical monument in Berlin,
        built on the orders of Prussian king Frederick William II after the (temporarily)
        successful restoration of order during the early Batavian Revolution.
        One of the best-known landmarks of Germany, it was built on the site of a former city gate
        that marked the start of the road from Berlin to the town of Brandenburg an der Havel,
        which used to be capital of the Margraviate of Brandenburg.
    </string>
    <string name="brandenburg_gate_address">Pariser Platz, 10117 Berlin</string>
    <string name="alexanderplatz">Alexanderplatz</string>
    <string name="alexanderplatz_d">
        Alexanderplatz is a large public square and transport hub in the central Mitte district of Berlin, near the Fernsehturm.
        Berliners often call it simply Alex, referring to a larger neighbourhood stretching from Mollstraße in the northeast to Spandauer Straße and the Rotes Rathaus in the southwest.
    </string>
    <string name="alexanderplatz_address">Alexanderplatz, 10178 Berlin</string>
    <string name="unter_den_linden">Unter den Linden</string>
    <string name="unter_den_linden_d">
        Unter den Linden ("under the linden trees") is a boulevard in the central Mitte district of Berlin, the capital of Germany.
        Running from the City Palace to Brandenburg Gate, it is named after the lime trees that line the grassed pedestrian mall on the median
        and the two broad carriageways. The avenue links numerous Berlin sights and landmarks.
    </string>
    <string name="unter_den_linden_address">Unter den Linden, 10117 Berlin</string>
    <string name="fernsehturm">Fernsehturm</string>
    <string name="fernsehturm_d">
        Close to Alexanderplatz in Berlin-Mitte, the tower was constructed between 1965 and 1969 by the government of the German Democratic Republic (GDR).
        It was intended as both a symbol of communist power and of Berlin. It remains the latter today, as it is easily visible throughout the central and some suburban districts of Berlin.
        With its height of 368 metres (including antenna) it is the tallest structure in Germany, and the second tallest structure in the European Union.
        Of three tallest structures in Europe, it is 0.5m shorter than the Riga Radio and TV Tower.
    </string>
    <string name="fernsehturm_address">Panoramastraße 1A, 10178 Berlin</string>
    <string name="berlin_hbf">Berlin Hauptbahnhof</string>
    <string name="berlin_hbf_d">
        Berlin Hauptbahnhof is the main railway station in Berlin, Germany.
        It came into full operation two days after a ceremonial opening on 26 May 2006.
        It\'s located on the site of the historic Lehrter Bahnhof, and until it opened as a main line station,
        it was a stop on the Berlin S-Bahn suburban railway temporarily named Berlin Hauptbahnhof - Lehrter Bahnhof.
    </string>
    <string name="berlin_hbf_address">Hauptbahnhof, Europaplatz 1, 10557 Berlin</string>
    <string name="siegessauele">Siegessaeule</string>
    <string name="siegessauele_d">
        The Victory Column (German: Siegessäule) is a monument in Berlin, Germany. Designed by Heinrich Strack, after 1864 to commemorate the Prussian victory in the Danish-Prussian War,
        by the time it was inaugurated on 2 September 1873, Prussia had also defeated Austria and its German allies in the Austro-Prussian War (1866) and France in the Franco-Prussian War (1870-71),
        giving the statue a new purpose. Different from the original plans, these later victories in the socalled unification wars inspired the addition of the bronze sculpture of Victoria, 8.3 metres (27 ft) high and weighing 35 tonnes,
        designed by Fridrich Drake. Berliners have given the statue the nickname Goldelse, meaning something like "Golden Lizzy".
    </string>
    <string name="siegessauele_address">Großer Stern, 10557 Berlin</string>
    <string name="hackescher_hoefe">Hackescher Höfe</string>
    <string name="hackescher_hoefe_d">
        The Hackesche Höfe are a notable courtyard complex situated adjacent to the Hackescher Markt in the centre of Berlin.
        The complex consists of eight interconnected courtyards, accessed through a main arched entrance at number 40 Rosenthaler Straße.
        The complex was designed in the Jugendstil (or Art Nouveau) style by August Endel, and the first courtyard is adorned with a magnificent facade of polychrome glazed brick.
        The construction of this project, launched in 1906, follows a pattern of clear separation between residential areas, crafts, trade and culture, which distinguishes it from the courtyards of the 19th century.
    </string>
    <string name="hackescher_hoefe_address">Rosenthaler Straße 40, 10178 Berlin</string>
    <string name="oberbaum_bruecke">Oberbaum Brücke</string>
    <string name="oberbaum_bruecke_d">
        The Oberbaum Bridge (German: Oberbaumbrücke) is a double-deck bridge crossing Berlin\'s River Spree, considered one of the city\'s landmarks.
        It links Friedrichshain and Kreuzberg, former boroughs that were divided by the Berlin Wall, and has become an important symbol of Berlin\’s unity.
        The lower deck of the bridge carries a roadway, which connects Oberbaum Straße to the south of the river with Warschauer Straße to the north.
        The upper deck of the bridge carries Berlin U-Bahn line U1, between Schlesisches Tor and Warschauer Straße stations.
        The bridge appears prominently in the 1998 film Run Lola Run.
    </string>
    <string name="oberbaum_bruecke_address">Oberbaumbrücke, 10243 Berlin</string>
    <string name="german_museum_of_technology">German Museum of Technology</string>
    <string name="german_museum_of_technology_d">
        Deutsches Technikmuseum Berlin (German Museum of Technology) in Berlin,
        Germany is a museum of science and technology, and exhibits a large collection of historical technical artifacts.
        The museum\'s main emphasis originally was on rail transport, but today it also features exhibits of various sorts of industrial technology.
        In 2003, it opened both maritime and aviation exhibition halls in a newly built extension.
        The museum also contains a science center called Spectrum.
    </string>
    <string name="german_museum_of_technology_address">Trebbiner Straße 9, 10963 Berlin</string>
    <string name="german_museum_of_technology_phone">+49 30 90254\-0</string>
    <string name="german_museum_of_technology_hours">9AM - 5:30PM</string>
    <string name="german_historical_museum">German Historical Museum</string>
    <string name="german_historical_museum_d">
        The German Historical Museum (Deutsches Historisches Museum), DHM for short, is a museum in Berlin devoted to German history and defines itself as a place of enlightenment and understanding of the shared history of Germans and Europeans.
        It is often viewed as one of the most important museums in Berlin and is one of the most frequented.
        The museum is located in the Zeughaus (armoury) on the avenue Unter den Linden as well as in the adjacent Exhibition Hall designed by I. M. Pei.
        The German Historical Museum is under the legal form of a foundation registered by the Federal Republic of Germany.
        Its highest-ranking body is the Board of Trustees (Kuratorium) with representatives of the Federal Government, the German Bundestag (Parliament) and the governments of the German Länder, or states.
    </string>
    <string name="german_historical_museum_address">Unter den Linden 2, 10117 Berlin</string>
    <string name="german_historical_museum_phone">+49 30 20304\-0</string>
    <string name="german_historical_museum_hours">10AM - 6PM</string>
    <string name="berliner_dom">Berlin Cathedral</string>
    <string name="berliner_dom_d">
        Berlin Cathedral (German: Berliner Dom) is the short name for the Evangelical Supreme Parish and Collegiate Church (German: Oberpfarr- und Domkirche zu Berlin) in Berlin, Germany.
        It is located on Museum Island in the Mitte borough.
        The current building was finished in 1905 and is a main work of Historicist architecture of the "Kaiserzeit".
        The Dom is the parish church of the congregation Gemeinde der Oberpfarr- und Domkirche zu Berlin,
        a member of the umbrella organisation Evangelical Church of Berlin-Brandenburg-Silesian Upper Lusatia.
        The Berlin Cathedral has never been a cathedral in the actual sense of that term since it has never been the seat of a bishop.
        The bishop of the Evangelical Church in Berlin-Brandenburg (under this name 1945–2003) is based at St. Mary\'s Church and Kaiser Wilhelm Memorial Church in Berlin.
    </string>
</resources>