<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.xella.berlintourguideapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berlin_infoblock1"
            android:drawableLeft="@drawable/ic_place"
            android:drawablePadding="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berlin_infoblock2"
            android:drawableLeft="@drawable/ic_linear_scale"
            android:drawablePadding="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berlin_infoblock3"
            android:drawableLeft="@drawable/ic_location_city"
            android:drawablePadding="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berlin_infoblock4"
            android:drawableLeft="@drawable/ic_directions_railway"
            android:drawablePadding="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berlin_infoblock5"
            android:drawableLeft="@drawable/ic_group"
            android:drawablePadding="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
