<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/berlin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_place"
                android:drawablePadding="32dp"
                android:layout_gravity="center"
                android:text="@string/berlin_infoblock1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_linear_scale"
                android:drawablePadding="32dp"
                android:text="@string/berlin_infoblock2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_location_city"
                android:drawablePadding="32dp"
                android:text="@string/berlin_infoblock3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_directions_railway"
                android:drawablePadding="32dp"
                android:text="@string/berlin_infoblock4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_group"
                android:drawablePadding="32dp"
                android:text="@string/berlin_infoblock5" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
